<resources>
    <string name="app_name">WordMaster</string>
    <string name="home">홈</string>
    <string name="dictionary">단어장</string>
    <string name="profile">내정보</string>
    <string name="kakao_login">카카오로그인</string>
    <string name="google_login">구글로그인</string>
    <string name="facebook_login">페이스북로그인</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="dict_max_count">max count</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="host">host</string>
    <string name="create_dict_title">제목</string>
    <string name="create_dict_title_hint">제목을 입력하세요</string>
    <string name="kakao_app_key">0uoT6oRzttv4myxiJyEb0BJfRJg=</string>
    <string name="openoption">openOption</string>
    <string name="accept">확인</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>
    <string name="eng">eng</string>
    <string name="kor">kor</string>
    <string name="create">추가</string>
    <string name="create_dict">단어추가</string>
    <string name="submit">제출</string>
    <string name="test_result">시험결과</string>
    <string name="left"><![CDATA[<=]]></string>
    <string name="right"><![CDATA[=>]]></string>
    <string name="google_web_client_id">1035033464779-np2p63o3bgin2tqt334mbi4hj31usm0v.apps.googleusercontent.com</string>
</resources>