<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp">

    <TextView
        android:id="@+id/dict_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/dict_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/dict_max_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dict_max_count"
        app:layout_constraintBottom_toBottomOf="@+id/dict_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toEndOf="@+id/dict_host"
        app:layout_constraintTop_toTopOf="@+id/dict_host"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dict_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dict_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/host"
        app:layout_constraintBottom_toBottomOf="@+id/dict_title"
        app:layout_constraintStart_toEndOf="@+id/dict_title"
        app:layout_constraintTop_toTopOf="@+id/dict_title" />

</androidx.constraintlayout.widget.ConstraintLayout>